[package]
name = "cs375-autograder"
version = "0.1.0"
description = "An autograder used for CS375 Compilers at UT Austin"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ansi_term = "0.12"
anyhow = "1.0"
atty = "0.2"
clap = { version = "3.2", features = ["derive"] }
difference = "2.0"
include_dir = "0.7"
tempdir = "0.3"
termcolor = "1.1"
zip = "0.6"
